--- a/app/views/analista/cliente_analista.html.erb
+++ b/app/views/analista/cliente_analista.html.erb
@@ -1,7 +1,7 @@
 
 
 
-<h2><strong><%= organizacao.name %></strong></h2><br/>
+<h2><strong><%= @organizacao.nome %></strong></h2><br/>
         
 <div class="container mt-5">
         <h3><strong>Dados da Empresa</strong></h3>
