--- a/app/views/analista/cliente_analista.html.erb
+++ b/app/views/analista/cliente_analista.html.erb
@@ -8,7 +8,7 @@
         <div class="card">
             <div class="card-body d-flex">
                 <div class="me-3">
-                    <strong>Cnpj:</strong> 11.111.111/0001-11
+                    <strong>Cnpj:</strong> @organizacao.cnpj
                 </div>
                 <div class="me-3">
                     <strong>Uf:</strong> DF
