--- a/app/views/analista/cliente_analista.html.erb
+++ b/app/views/analista/cliente_analista.html.erb
@@ -25,7 +25,7 @@
         <div class="card">
             <div class="card-body d-flex">
                 <div class="me-3">
-                    <strong>Nome:</strong> João 
+                    <strong>Nome:</strong> <%= @responsavelEmpresa.name %> 
                 </div>
                 <div class="me-3">
                     <strong>Sobrenome:</strong> Silva
@@ -45,7 +45,7 @@
         <div class="card">
             <div class="card-body d-flex">
                 <div class="me-3">
-                    <strong>Nome:</strong> João 
+                    <strong>Nome:</strong> <%= @responsavelPreenchimento.name %> 
                 </div>
                 <div class="me-3">
                     <strong>Sobrenome:</strong> Silva
