--- a/app/views/analista/cliente_analista.html.erb
+++ b/app/views/analista/cliente_analista.html.erb
@@ -11,7 +11,19 @@
                     <strong>Cnpj:</strong> <%= @organizacao.cnpj %>
                 </div>
                 <div class="me-3">
+                    <strong>Endereço :</strong> DF
+                </div>
+                <div class="me-3">
+                    <strong>Cep:</strong> DF
+                </div>
+                <div class="me-3">
                     <strong>Uf:</strong> DF
+                </div>
+                <div class="me-3">
+                    <strong>Telefone:</strong> DF
+                </div>
+                <div class="me-3">
+                    <strong>Email:</strong> DF
                 </div>
                 <div class="me-3">
                     <strong>Serviços de Telecom:</strong> SCM - Serviço de Comunicação Multimídia, SEAC - TV por Assinatura, STFC - Serviço Telefônico Fixo Comutado <br/><br/>
