--- a/app/views/analista/cliente_analista.html.erb
+++ b/app/views/analista/cliente_analista.html.erb
@@ -9,6 +9,7 @@
             <div class="card-body d-flex">
                 <div class="me-3">
                     <strong>Cnpj:</strong> <%= @organizacao.cnpj %>
+                    <strong>Endereço :</strong> DF 
                 </div>
                 <div class="me-3">
                     <strong>Endereço :</strong> DF
