--- a/app/views/analista/cliente_analista.html.erb
+++ b/app/views/analista/cliente_analista.html.erb
@@ -8,12 +8,12 @@
         <div class="card">
             <div class="card-body d-flex">
                 <div class="me-3">
-                    <strong>Cnpj:</strong> <%= @organizacao.cnpj %>
-                    <strong>Endereço :</strong> DF
-                    <strong>Cep:</strong> DF
-                    <strong>Uf:</strong> DF
-                    <strong>Telefone:</strong> DF
-                    <strong>Email:</strong> DF
+                    <strong>Cnpj:</strong> <%= @organizacao.cnpj %><br/>
+                    <strong>Endereço :</strong> DF<br/>
+                    <strong>Cep:</strong> DF<br/>
+                    <strong>Uf:</strong> DF<br/>
+                    <strong>Telefone:</strong> DF<br/>
+                    <strong>Email:</strong> DF<br/>
                     <strong>Serviços de Telecom:</strong> SCM - Serviço de Comunicação Multimídia, SEAC - TV por Assinatura, STFC - Serviço Telefônico Fixo Comutado
                 </div>
                
