--- a/app/views/analista/cliente_analista.html.erb
+++ b/app/views/analista/cliente_analista.html.erb
@@ -14,7 +14,7 @@
                     <strong>Uf:</strong> <%= @organizacao.uf %><br/>
                     <strong>Telefone:</strong> <%= @organizacao.telefone %><br/>
                     <strong>Email:</strong> <%= @organizacao.email %><br/>
-                    <strong>Serviços de Telecom:</strong> <%= @organizacao.servico %>
+                    <strong>Serviços de Telecom:</strong> <%= @organizacao.servicos %>
                 </div>
                
                
