--- a/app/views/analista/cliente_analista.html.erb
+++ b/app/views/analista/cliente_analista.html.erb
@@ -29,10 +29,10 @@
                     <strong>Nome:</strong> <%= @responsavelEmpresa.name %> 
                 </div>
                 <div class="me-3">
-                    <strong>Sobrenome:</strong> Silva
+                    <strong>Sobrenome:</strong> <%= @responsavelEmpresa.lastname %> 
                 </div>
                 <div class="me-3">
-                    <strong>Email:</strong> joao.silva@example.com
+                    <strong>Email:</strong> <%= @responsavelEmpresa.mail %> 
                 </div>
                 <div>
                     <strong>Telefone:</strong> (61) 98765-4321<br/><br/>
