--- a/app/views/analista/cliente_analista.html.erb
+++ b/app/views/analista/cliente_analista.html.erb
@@ -33,7 +33,7 @@
                     <strong>Email:</strong> <%= @responsavelEmpresa.mail %> 
                 </div>
                 <div>
-                    <strong>Telefone:</strong> (61) 98765-4321<br/><br/>
+                    <strong>Telefone:</strong> <%= @responsavelEmpresa.telefone %>
                 </div>
             </div>
         </div>
