--- a/app/views/analista/cliente_analista.html.erb
+++ b/app/views/analista/cliente_analista.html.erb
@@ -26,14 +26,14 @@
         <div class="card">
             <div class="card-body d-flex">
                 <div class="me-3">
-                    <strong>Nome:</strong> <%= @responsavelEmpresa.name %> 
+                    <strong>Nome:</strong> <%= @responsavelEmpresa.nome %> 
                 </div>
                 
                 <div class="me-3">
-                    <strong>Email:</strong> <%= @responsavelEmpresa.mail %> 
+                    <strong>Email:</strong> <%= @responsavelEmpresa.email %> 
                 </div>
-                <div>
-                    <strong>Telefone:</strong>
+                <div class="me-3">
+                    <strong>Telefone:</strong> <%= @responsavelEmpresa.telefone %>
                 </div>
             </div>
         </div>
@@ -44,14 +44,14 @@
         <div class="card">
             <div class="card-body d-flex">
                 <div class="me-3">
-                    <strong>Nome:</strong> <%= @responsavelPreenchimento.name %> 
+                    <strong>Nome:</strong> <%= @responsavelPreenchimento.nome %> 
                 </div>
                 
                 <div class="me-3">
-                    <strong>Email:</strong> joao.silva@example.com
+                    <strong>Email:</strong> <%= @responsavelPreenchimento.email %> 
                 </div>
-                <div>
-                    <strong>Telefone:</strong> (61) 98765-4321<br/><br/>
+                <div class="me-3">
+                    <strong>Telefone:</strong> <%= @responsavelPreenchimento.telefone %>
                 </div>
             </div>
         </div>
