--- a/app/views/analista/cliente_analista.html.erb
+++ b/app/views/analista/cliente_analista.html.erb
@@ -71,7 +71,7 @@
             <div class="col-md-4">
                 <div class="custom-box">
                     <div class="box-title">MENSAL</div>
-                    <a href="http://201.76.43.189:88/coleta/mensal/criar" class="box-link">Criar coleta</a>
+                    <a href="/coleta/mensal/criar?id_projeto=<%= project.id %>" class="box-link">Criar coleta</a>
                 </div>
             </div>
             <div class="col-md-4">
