--- a/app/views/coleta_mensal/criar.html.erb
+++ b/app/views/coleta_mensal/criar.html.erb
@@ -8,7 +8,7 @@
                 <div class="custom-box">
                     <div class="box-title">SCM</div>
                     <div class="box-description">Coleta de dados de acessos:
-                     <select id="uf" class="form-select">
+                     <select id="mes" class="form-select">
                                 <option selected>Mês da coleta</option>
                                 <option value="1">Janeiro</option>
                                 <option value="2">Fevereiro</option>
