--- a/app/views/coleta_mensal/criar.html.erb
+++ b/app/views/coleta_mensal/criar.html.erb
@@ -4,6 +4,7 @@
 
         <%= form_for @coleta, url: coleta_mensal_inserir_path do |f| %>
         <%= f.hidden_field :id_projeto, :value => @projeto.id %>
+        <%= f.hidden_field :tipoColeta, :value => "SCM" %>
             <div class="col-md-4">
                 <div class="custom-box">
                     <div class="box-title">SCM</div>
