--- a/app/views/coleta_mensal/criar.html.erb
+++ b/app/views/coleta_mensal/criar.html.erb
@@ -13,7 +13,7 @@
                     </div>
                      <%= f.submit "Criar coleta", class:" icon icon-add float-right" %>
 
-                     
+                    </div> 
                 </div>
             </div>
         <% end %>
