--- a/app/views/coleta_mensal/criar.html.erb
+++ b/app/views/coleta_mensal/criar.html.erb
@@ -9,7 +9,7 @@
                 <div class="custom-box">
                     <div class="box-title">SCM</div>
                     <div class="box-description">Coleta de dados de acessos:
-                    <p class="form-select"><%= f.select :mes, [['Janeiro', 1], ['Fevereiro', 2], ['Março', 3], ['Abril', 4],  ['Maio', 5],  ['Junho', 6],  ['Julho', 7],  ['Agosto', 8],  ['Setembro', 9],  ['Outubro', 10],  ['Novembro', 11],  ['Dezembro', 12] ] %></p>
+                    <p <%= f.select class="form-select" :mes, [['Janeiro', 1], ['Fevereiro', 2], ['Março', 3], ['Abril', 4],  ['Maio', 5],  ['Junho', 6],  ['Julho', 7],  ['Agosto', 8],  ['Setembro', 9],  ['Outubro', 10],  ['Novembro', 11],  ['Dezembro', 12] ] %></p>
                     </div>
                      <%= f.submit "Criar coleta", class:" icon icon-add float-right" %>
 
