--- a/app/views/coleta_semestral/criar.html.erb
+++ b/app/views/coleta_semestral/criar.html.erb
@@ -1,85 +1,58 @@
- <div class="container">
+  <div class="container">
     
         <div class="row justify-content-center">
-          <h2><b>Criar Coleta Semestral</b></h2>
-            <div class="col-md-4">
-                <div class="custom-box">
-                    <div class="box-title">SCM</div>
-                    <div class="box-description">
-                     <select id="uf" class="form-select">
-                                <option selected>Mês da coleta</option>
-                                <option value="SP">Janeiro</option>
-                                <option value="RJ">Fevereiro</option>
-                                <option value="RJ">Março</option>
-                                <option value="RJ">Abril</option>
-                                <option value="RJ">Maio</option>
-                                <option value="RJ">Junho</option>
-                                <option value="RJ">Julho</option>
-                                <option value="RJ">Agosto</option>
-                                <option value="RJ">Setembro</option>
-                                <option value="RJ">Outubro</option>
-                                <option value="RJ">Novembro</option>
-                                <option value="RJ">Dezembro</option>
-                              
-                                <!-- Adicione mais opções conforme necessário -->
-                            </select>
-                    </div>
 
-                     <a href="#" class="box-link">Criar coletas</a>
-                   
-                    
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="custom-box">
-                    <div class="box-title">SEAC</div>
-                    <div class="box-description">
-                     <select id="uf" class="form-select">
-                                <option selected>Mês da coleta</option>
-                                <option value="SP">Janeiro</option>
-                                <option value="RJ">Fevereiro</option>
-                                <option value="RJ">Março</option>
-                                <option value="RJ">Abril</option>
-                                <option value="RJ">Maio</option>
-                                <option value="RJ">Junho</option>
-                                <option value="RJ">Julho</option>
-                                <option value="RJ">Agosto</option>
-                                <option value="RJ">Setembro</option>
-                                <option value="RJ">Outubro</option>
-                                <option value="RJ">Novembro</option>
-                                <option value="RJ">Dezembro</option>
-                              
-                                <!-- Adicione mais opções conforme necessário -->
-                            </select>
+        <div class="col-md-4">
+            <div class="custom-box">
+              <%= form_for @coleta, url: coleta_semestral_inserir_path do |f| %>
+              <%= f.hidden_field :id_projeto, :value => @projeto.id %>
+              <%= f.hidden_field :tipoColeta, :value => "SCM" %>
+                    <div class="box-title">SCM</div>
+                    <div class="box-description">Coleta de dados de acessos:
+                    <p> <%= f.select :mes, [['Janeiro', 1], ['Fevereiro', 2], ['Março', 3], ['Abril', 4],  ['Maio', 5],  ['Junho', 6],  ['Julho', 7],  ['Agosto', 8],  ['Setembro', 9],  ['Outubro', 10],  ['Novembro', 11],  ['Dezembro', 12] ] %></p>
                     </div>
-                     <a href="#" class="box-link">Criar coletas</a>
-                </div>
+                     <%= f.submit "Criar coleta", class:" icon icon-add float-right" %>
+              <% end %>
             </div>
-            <div class="col-md-4">
-                <div class="custom-box">
-                    <div class="box-title">SMP</div>
-                    <div class="box-description">
-                    <select id="uf" class="form-select">
-                                <option selected>Mês da coleta</option>
-                                <option value="SP">Janeiro</option>
-                                <option value="RJ">Fevereiro</option>
-                                <option value="RJ">Março</option>
-                                <option value="RJ">Abril</option>
-                                <option value="RJ">Maio</option>
-                                <option value="RJ">Junho</option>
-                                <option value="RJ">Julho</option>
-                                <option value="RJ">Agosto</option>
-                                <option value="RJ">Setembro</option>
-                                <option value="RJ">Outubro</option>
-                                <option value="RJ">Novembro</option>
-                                <option value="RJ">Dezembro</option>
-                              
-                                <!-- Adicione mais opções conforme necessário -->
-                            </select>
+        </div>
+
+
+        <div class="col-md-4">
+            <div class="custom-box">
+  
+              <%= form_for @coleta, url: coleta_semestral_inserir_path do |f| %>
+              <%= f.hidden_field :id_projeto, :value => @projeto.id %>
+              <%= f.hidden_field :tipoColeta, :value => "TVpA" %>
+                    <div class="box-title">TVpA</div>
+                    <div class="box-description">Coleta de dados Econômicos-financeiros e Técnico-operacionais
+                    <p> <%= f.select :mes, [['Janeiro', 1], ['Fevereiro', 2], ['Março', 3], ['Abril', 4],  ['Maio', 5],  ['Junho', 6],  ['Julho', 7],  ['Agosto', 8],  ['Setembro', 9],  ['Outubro', 10],  ['Novembro', 11],  ['Dezembro', 12] ] %></p>
                     </div>
-                     <a href="#" class="box-link">Criar coletas</a>
-                </div>
+                     <%= f.submit "Criar coleta", class:" icon icon-add float-right" %>
+              <% end %>
             </div>
+        </div>
+
+
+        <div class="col-md-4">
+            <div class="custom-box">
+
+              <%= form_for @coleta, url: coleta_semestral_inserir_path do |f| %>
+              <%= f.hidden_field :id_projeto, :value => @projeto.id %>
+              <%= f.hidden_field :tipoColeta, :value => "STFC" %>
+                    <div class="box-title">STFC</div>
+                    <div class="box-description">Coleta de dados de Infraestrutura de Transporte
+                    <p> <%= f.select :mes, [['Janeiro', 1], ['Fevereiro', 2], ['Março', 3], ['Abril', 4],  ['Maio', 5],  ['Junho', 6],  ['Julho', 7],  ['Agosto', 8],  ['Setembro', 9],  ['Outubro', 10],  ['Novembro', 11],  ['Dezembro', 12] ] %></p>
+                    </div>
+                     <%= f.submit "Criar coleta", class:" icon icon-add float-right" %>
+              <% end %>
+
+
+            </div>
+        </div>
+
+
+    </div>
+</div>
         </div>
     </div>
 </div>
