--- a/app/views/analista/cliente_analista.html.erb
+++ b/app/views/analista/cliente_analista.html.erb
@@ -101,38 +101,17 @@
                 </tr>
             </thead>
             <tbody>
+
+                <% for coleta in @coletas %>
                 <tr>
                     <td>1</td>
                     <td>Atrasada</td>
-                    <td>Julho 2024</td>
-                    <td>Mensal</td>
-                    <td>SCM</td>
+                    <td><%= coleta.textoData %></td>
+                    <td><%= coleta.tituloColeta %></td>
+                    <td><%= coleta.tipoColeta %></td>
                     <td><a href="/cliente/mensal?id_projeto=<%= @organizacao.idProject %>" class="btn btn-sm btn-custom">Fazer coleta</a> </td>
-
                 </tr>
-               </td>
-                        
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td>Feita</td>
-                    <td>Junho 2024</td>
-                    <td>Semestral</td>
-                    <td></td>
-                    <td><a href="#" class="btn btn-sm btn-custom">Ver coleta</a></td>
-                </tr>
-                </td>
-                </tr>
-                <tr>
-                    <td>3</td>
-                    <td>A Fazer</td>
-                    <td>Agosto 2024</td>
-                    <td>Anual</td>
-                    <td>Estação</td>
-                    <td><a href="#" class="btn btn-sm btn-custom">Fazer coleta</a></td>
-                </tr>
-                </td>
-                </tr>
+                <% end %>
             </tbody>
         </table>
     </div>
