--- a/app/views/analista/cliente_analista.html.erb
+++ b/app/views/analista/cliente_analista.html.erb
@@ -109,7 +109,7 @@
                     <td><%= coleta.textoData %></td>
                     <td><%= coleta.tituloColeta %></td>
                     <td><%= coleta.tipoColeta %></td>
-                    <td><a href="/cliente/mensal?id_projeto=<%= @organizacao.idProject %>" class="btn btn-sm btn-custom">Fazer coleta</a> </td>
+                    <td><a href="/cliente/mensal?id_projeto=<%= @organizacao.idProject %>" class="btn btn-sm btn-custom">Criar coleta</a> </td>
                 </tr>
                 <% end %>
             </tbody>
