--- a/app/views/analista/cliente_analista.html.erb
+++ b/app/views/analista/cliente_analista.html.erb
@@ -77,7 +77,7 @@
             <div class="col-md-4">
                 <div class="custom-box">
                     <div class="box-title">SEMESTRAL</div>
-                    <a href="/coleta/semestral/criar?id_projeto=<%= @organizacao.idProject %>" class="box-link">Criarr coleta</a>
+                    <a href="/coleta/semestral/criar?id_projeto=<%= @organizacao.idProject %>" class="box-link">Criar coleta</a>
                 </div>
             </div>
             <div class="col-md-4">
