--- a/app/views/analista/cliente_analista.html.erb
+++ b/app/views/analista/cliente_analista.html.erb
@@ -105,7 +105,7 @@
                 <% for coleta in @coletas %>
                 <tr>
                     <td>1</td>
-                    <td>Atrasada</td>
+                    <td><%= coleta.status %></td>
                     <td><%= coleta.textoData %></td>
                     <td><%= coleta.tituloColeta %></td>
                     <td><%= coleta.tipoColeta %></td>
