--- a/app/views/cliente/index_cliente.html.erb
+++ b/app/views/cliente/index_cliente.html.erb
@@ -4,7 +4,7 @@
             <div class="col-md-4">
                 <div class="custom-box">
                     <div class="box-title">MENSAL</div>
-                    <div class="box-description">Coleta de dados de acessos:<br/>SCM, SEAC, STFC</div>
+                    <div class="box-description">Coleta de dados de acessos</div>
                     <a href="#" class="box-link">Fazer coletas</a>
                 </div>
             </div>
@@ -33,41 +33,37 @@
                     <th scope="col">Coleta</th>
                     <th scope="col">Status</th>
                     <th scope="col">Data</th>
-                    <th scope="col">Formulário</th>
-                    <th scope="col">Tipo</th>
+                    <th scope="col">Data limite</th>
                     <th scope="col">Ação</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td>1</td>
+                    <td>Colteta Mensal</td>
                     <td><span class="badge bg-danger">Atrasada</span></td>
-                    <td>Julho 2024</td>
-                    <td>Mensal</td>
-                    <td>SCM</td>
-                    <td><a href="http://201.76.43.189:88/cliente/mensal" class="btn btn-sm btn-custom">Fazer coleta</a> </td>
+                    <td>Maio 2024</td>
+                    <td>01/07/2024</td>
+                    <td><a href="#" class="btn btn-sm btn-custom">Fazer coleta</a> </td>
 
                 </tr>
                </td>
                         
                 </tr>
                 <tr>
-                    <td>2</td>
-                    <td><span class="badge bg-success">Feita</span></td>
-                    <td>Junho 2024</td>
-                    <td>Semestral</td>
-                    <td></td>
-                    <td><a href="#" class="btn btn-sm btn-custom">Ver coleta</a></td>
+                    <td>Colteta Semestral</td>
+                    <td><span class="badge bg-sucess">À fazer</span></td>
+                    <td>1 semestre 2024</td>
+                    <td>01/07/2024</td>
+                    <td><a href="#" class="btn btn-sm btn-custom">Fazer coleta</a> </td>
                 </tr>
                 </td>
                 </tr>
                 <tr>
-                    <td>3</td>
-                    <td><span class="badge bg-primary">A Fazer</span></td>
-                    <td>Agosto 2024</td>
-                    <td>Anual</td>
-                    <td>Estação</td>
-                    <td><a href="#" class="btn btn-sm btn-custom">Fazer coleta</a></td>
+                    <td>Colteta Anual</td>
+                    <td><span class="badge bg-danger">Atrasada</span></td>
+                    <td>Maio 2024</td>
+                    <td>22/09/2024</td>
+                    <td><a href="#" class="btn btn-sm btn-custom">Fazer coleta</a> </td>
                 </tr>
                 </td>
                 </tr>
