--- a/app/views/cliente/index_cliente.html.erb
+++ b/app/views/cliente/index_cliente.html.erb
@@ -5,14 +5,14 @@
                 <div class="custom-box">
                     <div class="box-title">MENSAL</div>
                     <div class="box-description">Coleta de dados de acessos</div>
-                    <a href="coleta/mensal/criar" class="box-link">Fazer coletas</a>
+                    <a href="#" class="box-link">Fazer coletas</a>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="custom-box">
                     <div class="box-title">SEMESTRAL</div>
                     <div class="box-description">Coleta de dados Econômicos-financeiros e Técnico-operacionais</div>
-                    <a href="coleta/semestral/criar" class="box-link">Fazer coletas</a>
+                    <a href="#" class="box-link">Fazer coletas</a>
                 </div>
             </div>
             <div class="col-md-4">
