--- a/app/views/coleta_mensal/fazer.html.erb
+++ b/app/views/coleta_mensal/fazer.html.erb
@@ -1,6 +1,6 @@
  <div class="container mt-5">
 
-<h3><strong>Dados de Acesso - SCM</strong></h3>
+<h3><strong>Fazer coleta</strong></h3>
 
        
        
