--- a/app/views/cliente/index_cliente.html.erb
+++ b/app/views/cliente/index_cliente.html.erb
@@ -45,7 +45,7 @@
                     <td><%= coleta.status %></td>
                     <td><%= coleta.tituloColeta %></td>
                     <td><%= coleta.tipoColeta %></td>
-                    <td><a href="/cliente/mensal?id_coleta=<%= @coleta.id %>" class="btn btn-sm btn-custom">Fazer coleta</a> </td>
+                    <td><a href="/cliente/mensal?id_coleta=<%= coleta.id %>" class="btn btn-sm btn-custom">Fazer coleta</a> </td>
                 </tr>
                 <% end %>
             </tbody>
