--- a/app/views/cliente/index_cliente.html.erb
+++ b/app/views/cliente/index_cliente.html.erb
@@ -46,13 +46,13 @@
                     <td><%= coleta.tituloColeta %></td>
                     <td><%= coleta.tipoColeta %></td>
                     <% if coleta.tituloColeta == 'Coleta Mensal' %>
-                      <td><a href="/coleta/mensal?id_coleta=<%= coleta.id %>" class="btn btn-sm btn-custom">Fazer coleta</a> </td>
+                      <td><a href="/coleta/mensal/fazer?id_coleta=<%= coleta.id %>" class="btn btn-sm btn-custom">Fazer coleta</a> </td>
                     <% end %>
                     <% if coleta.tituloColeta == 'Coleta Semestral' %>
-                      <td><a href="/coleta/semestral?id_coleta=<%= coleta.id %>" class="btn btn-sm btn-custom">Fazer coleta</a> </td>
+                      <td><a href="/coleta/semestral/fazer?id_coleta=<%= coleta.id %>" class="btn btn-sm btn-custom">Fazer coleta</a> </td>
                     <% end %>
                     <% if coleta.tituloColeta == 'Coleta Anual' %>
-                      <td><a href="/coleta/anual?id_coleta=<%= coleta.id %>" class="btn btn-sm btn-custom">Fazer coleta</a> </td>
+                      <td><a href="/coleta/anual/fazer?id_coleta=<%= coleta.id %>" class="btn btn-sm btn-custom">Fazer coleta</a> </td>
                     <% end %>
                 </tr>
                 <% end %>
