--- a/app/views/coleta_mensal/fazer.html.erb
+++ b/app/views/coleta_mensal/fazer.html.erb
@@ -6,7 +6,8 @@
               <%= form_for @coleta, url: coleta_mensal_atualizar_path do |f| %>
                     <div class="box-title">SCM</div>
                        <div class="box-description">Coleta de dados de acessos:
-                          <div class="row mb-3">
+                         
+                            <div class="row mb-3">
                             <div class="col-md-6">
                               <%= f.label :uf, "Selecione o Estado" %>
                               <%= f.select :uf, options_for_select([['AC', 'AC'], ['AL', 'AL'], ['AP', 'AP'], ['AM', 'AM'], ['BA', 'BA'], ['CE', 'CE'], ['DF', 'DF'], ['ES', 'ES'], ['GO', 'GO'], ['MA', 'MA'], ['MT', 'MT'],['MS', 'MS'], ['MG', 'MG'], ['PA', 'PA'], ['PB', 'PB'], ['PR', 'PR'], ['PE', 'PE'], ['PI', 'PI'], ['RJ', 'RJ'], ['RN', 'RN'], ['RS', 'RS'], ['RO', 'RO'], ['RR', 'RR'], ['SC', 'SC'], ['SP', 'SP'], ['SE', 'SE'], ['TO', 'TO']]) %>
@@ -16,6 +17,17 @@
                                <%= f.text_field :cidade, class: "form-control", id: "cidade", placeholder: "Digite a cidade" %>
                           </div>
                        </div>
+
+                      <div class="row mb-3">
+                        <div class="col-md-6">
+                          <%= f.label :tipoCliente, "Tipo de Cliente", class: "form-label" %>
+                          <%= f.select :state, options_for_select([['PF', 'Pessoa Física'], ['PJ', 'Pessoa Jurídica'], ['UP', 'Uso Próprio']]) %>
+                        </div>
+                        <div class="col-md-6">
+                          <%= f.label :tipoAtendimento, "Tipo de Atendimento", class: "form-label" %>
+                          <%= f.select :state, options_for_select([['rural', 'Rural'], ['urbano', 'Urbano']]) %>
+                        </div>
+                      </div>
                <% end %>
 
 
@@ -25,43 +37,7 @@
 
   
 
-            <div class="card-body">
-                <form>
-                    <div class="row mb-3">
-                        <div class="col-md-6">
-                            <label for="uf" class="form-label">UF</label>
-                            <select id="uf" class="form-select">
-                                 <option selected>Escolher...</option>
-                                <option value="SP">AC</option>
-                                <option value="RJ">AL</option>
-                                <option value="RJ">AP</option>
-                                <option value="RJ">AM</option>
-                                <option value="RJ">BA</option>
-                                <option value="RJ">CE</option>
-                                <option value="RJ">DF</option>
-                                <option value="RJ">ES</option>
-                                <option value="RJ">GO</option>
-                                <option value="RJ">MA</option>
-                                <option value="RJ">MT</option>
-                                <option value="RJ">MS</option>
-                                <option value="RJ">MG</option>
-                                <option value="RJ">PA</option>
-                                <option value="RJ">PB </option>
-                                <option value="RJ">PR</option>
-                                <option value="RJ">PE</option>
-                                <option value="RJ">PI</option>
-                                <option value="RJ">RJ</option>
-                                <option value="RJ">RN</option>
-                                <option value="RJ">RS</option>
-                                <option value="RJ">RO</option>
-                                <option value="RJ">RR</option>
-                                <option value="RJ">SC</option>
-                                <option value="RJ">SP</option>
-                                <option value="RJ">SE</option>
-                                <option value="RJ">TO</option>
-                                <!-- Adicione mais opções conforme necessário -->
-                            </select>
-                        </div>
+            
                         <div class="col-md-6">
                             <label for="cidade" class="form-label">Cidade</label>
                             <input type="text" class="form-control" id="cidade" placeholder="Digite a cidade">
