--- a/app/views/coleta_mensal/fazer.html.erb
+++ b/app/views/coleta_mensal/fazer.html.erb
@@ -28,6 +28,22 @@
                           <%= f.select :state, options_for_select([['rural', 'Rural'], ['urbano', 'Urbano']]) %>
                         </div>
                       </div>
+
+                     <div class="row mb-3">
+                       <div class="col-md-6">
+                          <%= f.label :tipoMeio, "Tipo de Meio", class: "form-label" %>
+                          <%= f.select :state, options_for_select([['cabo_coaxial', 'Cabo_coaxial'], ['cabo_metalico', 'Cabo_metálico'], ['satelite', 'Satélite'], ['radio', 'Rádio'], ['fibra', 'Fibra']]) %>
+                        </div>
+
+                      <div class="col-md-6">
+                          <%= f.label :tipoTecnologia, "Tipo de Tecnologia", class: "form-label" %>
+                          <%= f.select :state, options_for_select([['ADSL', 'ADSL'], ['ADSL2', 'ADSL2'], ['AMPS', 'AMPS'], ['ATM', 'ATM'], ['Cable Modem', 'Cable Modem'], ['CDMA_IS_95	', 'CDMA IS 95	'],
+                          ['DTH', 'DTH'], ['EDGE', 'EDGE'], ['ETHERNET', 'ETHERNET'], ['FR', 'FR'], ['FTTB', 'FTTB'], ['FTTH', 'FTTH'], ['GPRS', 'GPRS'], ['GSM', 'GSM'], ['HDSL', 'HDSL'],  ['HDSL', 'HDSL'],
+                          ['HFS', 'HFS'], ['HSDPA', 'HSDPA'], ['HSPA+', 'HSPA+'], ['HSPAP', 'HSPAP'], ['HSUPA', 'HSUPA'], ['LTE', 'LTE'], ['NR_NSA', 'NR NSA'], ['NR_SA', 'NR SA'], ['OFDMA_TDD', 'OFDMA/TDD'],
+                          ['Acesso_livre_via_satElite', 'Acesso livre via satélite'], ['SDH', 'SDH'], ['SONET', 'SONET'], ['VDSL', 'VDSL'], ['VSAT', 'VSAT'], [' WCDMA', ' WCDMA'], ['Wi-Fi', ' Wi-Fi'],
+                          ['WIMAX', ' WIMAX']]) %>
+                      </div>
+                    </div>
                <% end %>
 
 
