--- a/app/views/coleta_mensal/fazer.html.erb
+++ b/app/views/coleta_mensal/fazer.html.erb
@@ -25,7 +25,7 @@
                         </div>
                         <div class="col-md-6">
                           <%= f.label :tipoAtendimento, "Tipo de Atendimento", class: "form-label" %>
-                          <%= f.select :tioAtendimento, options_for_select([['rural', 'Rural'], ['urbano', 'Urbano']]) %>
+                          <%= f.select :tipoAtendimento, options_for_select([['rural', 'Rural'], ['urbano', 'Urbano']]) %>
                         </div>
                       </div>
 
